--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -43,12 +43,13 @@ jobs:
     - name: Build with Gradle
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
-        arguments: buildPlugin
+        arguments: buildPlugin buildPluginLegacy
 
     # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
     # the publishing section of your build.gradle
     - name: Publish to GitHub
       uses: actions/upload-artifact@v3
       with:
+        name: 构建插件成品-finishedPlugin
         path: build/mirai/*.jar
         
